[tool.poetry]
name = "bin-convert"
version = "0.1.0"
description = "Convert arbitrary binary data to wav"
authors = ["Abe Hmiel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1"
numpy = "^1"
click = "^7"
wave = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
