[project]
name = "arbitrary-binary-wav"
version = "0.1.0"
description = "Convert arbitrary binary data to wav"
authors = [{name = "Abe Hmiel"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "scipy>=1",
    "numpy>=1",
]

[project.scripts]
arbitrary-binary-wav = "arbitrary_binary_wav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arbitrary_binary_wav.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
